<resources>
    <string name="app_name">searchbook</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_library">My library</string>

    <!-- strings used in .java files -->
    <string name="noInternet">No internet</string>
    <string name="noBooksFound">No books found</string>
    <string name="linkNotAvailable">Link not available</string>
    <string name="notFound">Not found</string>

    <!--strings used in .xml files -->
    <string name="searchBook">Search book</string>
    <string name="publishedIn">Published in</string>
    <string name="authors">Authors:</string>
    <string name="publisher">Publisher:</string>
    <string name="publishedDate">Published date:</string>
    <string name="description">Description:</string>
    <string name="ViewItOnline">View it Online</string>
    <string name="sample_description">
        See all the things coding can accomplish The demand for people with coding know-how exceeds the number
        of people who understand the languages that power technology. Coding All-in-One For Dummies gives you
        an ideal place to start when you\'re ready to add this valuable asset to your professional repertoire.
        Whether you need to…
    </string>

    <string name="no_results">"Oops, what you're looking for doesn't exist"</string>
    <string name="try_again">Try other keywords</string>
    <string name="no_internet">No internet connection :(</string>
    <string name="save_book">Save book</string>

    <string name="search_frag">searchbook</string>
    <string name="library_frag">My library</string>

    <string name="not_saved">Error saving the book</string>
    <string name="saved">Saved</string>
    <string name="delete_book">Delete book</string>

    <string name="sureness">Are you sure you wan\'t to delete this book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Book deleted</string>
    <string name="not_deleted">Couldn\'t delete book</string>

    <string name="start">Start by adding some books from the search tab</string>
    <string name="empty_library">It\'s empty here… :(</string>
</resources>
