<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/starting_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/books"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/search_edit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/searchBook"
        android:maxLines="1"
        android:paddingLeft="16dp" />

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_search">

        <FrameLayout
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:background="?attr/selectableItemBackground"
            android:padding="0dp" />
    </FrameLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_edit" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/search_emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/search_emptyImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            tools:src="@drawable/open_book"/>
        <TextView
            android:id="@+id/search_emptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_emptyImage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            tools:text="@string/no_results"/>
        <TextView
            android:id="@+id/search_emptySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_emptyTitle"
            android:layout_centerHorizontal="true"
            tools:text="@string/try_again"/>
    </RelativeLayout>

</RelativeLayout>